--- a/app/src/main/res/layout/fragment_lista_productos_estetica.xml
+++ b/app/src/main/res/layout/fragment_lista_productos_estetica.xml
@@ -20,11 +20,9 @@
         layout="@layout/fragment_no_data"
         android:visibility="gone" />
 
-    <LinearLayout
-        android:id="@+id/contListaProductos"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/searchBar"
@@ -44,32 +42,39 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <ListView
-            android:id="@+id/lisMenuProductos"
+        <LinearLayout
+            android:id="@+id/cont_add_producto"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:clipToPadding="false"/>
+            android:orientation="vertical"
+            android:background="@color/background_color"
+            app:layout_constraintTop_toBottomOf="@id/searchBar"
+            app:layout_constraintBottom_toTopOf="@id/btnAddProducto"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end">
-
-            <Button
-                android:id="@+id/btnAddProducto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Estética"
-                android:fontFamily="@font/poppins_bold"
-                android:drawableLeft="@drawable/ic_mas_blanco"
-                android:layout_margin="10dp"/>
-
+            <ListView
+                android:id="@+id/lisMenuProductos"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:divider="@null"
+                android:dividerHeight="0dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:clipToPadding="false"/>
         </LinearLayout>
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/btnAddProducto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estética"
+            android:fontFamily="@font/poppins_bold"
+            android:drawableLeft="@drawable/ic_mas_blanco"
+            android:layout_margin="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
